[project]
name = "minecraft-seven"
version = "0.1.0"
description = "Tool to build the minecraft font files into a format for Pixel Font Converter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xdialog>=1.2.0.1",
    "pillow>=10.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
minecraft_seven = "minecraft_seven:main"